# tma-mark2

./: .conflow.yaml  .editorconfig  .gitattributes  .gitignore  .guix-channel  .hypatia-ignore  .tool-versions  0-AI-MANIFEST.a2ml  CHANGELOG.adoc  CHANGELOG.md  CITATION.cff  CLAUDE.adoc  CODE_OF_CONDUCT.adoc  CONTRIBUTING.adoc  CONTRIBUTING.md  Containerfile  Containerfile.hardened  Containerfile.simple  Dockerfile  ECOSYSTEM.scm  EXPLAINME.adoc  FUNDING.yml  GOVERNANCE.adoc  Justfile  LICENSE.txt  MAINTAINERS.md  META.scm  QUICKSTART-DEV.adoc  QUICKSTART-MAINTAINER.adoc  QUICKSTART-USER.adoc  README.adoc  ROADMAP.adoc  ROADMAP.md  RSR_COMPLIANCE.adoc  RSR_OUTLINE.adoc  SEAMS_REVIEW.adoc  SECURITY.md  STATE.scm  TEST-NEEDS.md  TOPOLOGY.md  (+20 more)
.claude/: CLAUDE.md
.etmaMonitor-modernised/: README.adoc  monrubric1.txt
.etmaMonitor-modernised/original-decompiled/etmaMonitor/: Capture.java  EtmaMonitorJ.java  Suggest.java
.github/: dependabot.yml
.github/workflows/: codeql.yml  container-policy.yml  deno-ci.yml  dogfood-gate.yml  elixir-ci.yml  governance.yml  hypatia-scan.yml  jekyll-gh-pages.yml  mirror.yml  quality.yml  rescript-deno-ci.yml  rsr-antipattern.yml  static.yml  workflow-linter.yml
.hypatia/: activity.jsonl  last-visit.json
.java-modernised-v1/: README.adoc
.java-modernised-v1/licences/: LICENSE  NOTICE
.java-modernised-v1/scripts/: browser-auth-workaround.sh  file-handler.sh  first-run-setup.sh  install.sh  sanitise-data.sh
.java-modernised-v1/src/: Suggest.java
.java-modernised-v2/: ARCHITECTURE.md  build.gradle.kts
.java-modernised-v2/docs/: MODERNIZATION-LOG.adoc
.machine_readable/: ADJUST.contractile  AGENTIC.scm  CLADE.a2ml  ECOSYSTEM.scm  INTENT.contractile  META.scm  MUST.contractile  NEUROSYM.scm  PLAYBOOK.scm  STATE.scm  TRUST.contractile
.machine_readable/6a2/: ECOSYSTEM.a2ml  META.a2ml  STATE.a2ml
.machine_readable/6scm/: ECOSYSTEM.scm  META.scm  STATE.scm
.machine_readable/agent_instructions/: debt.a2ml
.machine_readable/anchors/: ANCHOR.a2ml
.machine_readable/svc/: README.adoc
.well-known/: ai.txt  aibdp.json  consent-required.txt  dc.xml  did.json  host-meta  humans.txt  keybase.txt  nostr.json  provenance.json  security.txt  webfinger
.well-known/groove/: manifest.json
LICENSES/: Palimpsest-0.5.txt
assets/: tailwind.config.js
assets/css/: app.css
assets/js/: app.js
audits/: assail-classifications.a2ml
bebop/schemas/: messages.bop  security.bop
config/: config.exs  default.ncl  dev.exs  prod.exs  runtime.exs  runtime_security.exs  test.exs
contractiles/intend/: Intentfile.a2ml
contractiles/trust/: Trustfile.a2ml
docs/: CITATIONS.adoc  COMPETITORS.md  FAILURE-MODES.md  FHI-SCHEMA.adoc  FORENSICS-REPORT-EXAMPLE.adoc  IDEAS.md  INTEGRITY.adoc  README.adoc  SESSION-2026-01-06.scm  tech-debt-2026-05-26.md
docs/ai/: warmup-dev.md  warmup-user.md
docs/architecture/: README.adoc  decisions.adoc  maa.adoc  overview.adoc  rmo.adoc  rmr.adoc
docs/examples/: forensics-report.adoc  nickel-config-example.ncl
docs/operations/: reversibility.md
docs/research/: citations.adoc  palimpsest.adoc
docs/sessions/: 2026-01-06.scm
docs/specs/: integrity.adoc
docs/status/: ci-state.md  seams-review.adoc
docs/wiki/: AI-Agent-Briefing.md  Architecture.md  Development.md  Documentation-Index.md  FHI-Format.md  Getting-Started.md  Governance.md  Home.md  License.md  README.md  RSR-Compliance.md  Roadmap-and-Status.md  _Footer.md  _Sidebar.md
etma-handler/: .gitignore  CODE_OF_CONDUCT.md  README.adoc  ROADMAP.adoc  browser-auth-workaround.sh  file-handler.sh  install.sh
examples/comment-banks/: computing-fundamentals.scm  convert-to-adoc.jl
examples/feedback/: sample-feedback.dj
experiments/: README.md
experiments/affine-frontend/: build.sh  main.affine
ffi/zig/src/: main.zig
java-modernised-v1/: README.adoc  compile.sh  etmaHandler
java-modernised-v1/config/: accessibility.toml
java-modernised-v1/scripts/: SCRIPTS.adoc  uninstall.sh
java-modernised-v1/src/: EtmaHandlerJ.java
lib/: etma_handler.ex  etma_handler_web.ex
lib/etma_handler/: application.ex  bouncer.ex  container.ex  crypto.ex  fhi.ex  nlp.ex  repo.ex  scanner.ex  security.ex  settings.ex
lib/etma_handler_web/: endpoint.ex  router.ex  telemetry.ex
mobile/: Cargo.toml
mobile/assets/: main.css
mobile/src/: api.rs  crypto.rs  main.rs  state.rs
mobile/src/components/: dashboard.rs  header.rs  loading.rs  login.rs  mod.rs  nav_bar.rs  progress_ring.rs  submission_card.rs
must/: must.ncl
must/contracts/: platform.ncl  security.ncl
native/tma_crypto/: Cargo.toml
native/tma_crypto/src/: lib.rs
native/tma_nlp/: Cargo.toml
native/tma_nlp/src/: lib.rs
panoptes/: CHANGELOG.md  CLAUDE.adoc  CODE_OF_CONDUCT.adoc  CONTRIBUTING.adoc  Cargo.toml  FUNDING.yml  GOVERNANCE.adoc  Justfile  LICENSE.txt  MAINTAINERS.md  README.adoc  REVERSIBILITY.md  ROADMAP.md  SECURITY.md  config.json  config.ncl
panoptes/.well-known/: ai.txt  consent-required.txt  humans.txt  provenance.json  security.txt
panoptes/docs/wiki/: Analyzers.adoc  CLI-Reference.adoc  Configuration.adoc  Getting-Started.adoc  Home.adoc  Installation.adoc  Troubleshooting.adoc
panoptes/src/: error.rs  history.rs  lib.rs  main.rs  ollama.rs  watcher.rs
panoptes/src/analyzers/: archive.rs  audio.rs  code.rs  document.rs  image.rs  mod.rs  pdf.rs  video.rs
panoptes/src/config/: mod.rs
panoptes/src/db/: mod.rs
panoptes/src/web/: index.html  mod.rs
scripts/: install.sh
src/: App.res  Phoenix.res  main.affine
test/: test_helper.exs
test/etma_handler/: bouncer_test.exs  calculator_test.exs  crypto_test.exs  nlp_test.exs  repo_test.exs
test/support/: conn_case.ex  data_case.ex
well-known-template/: README.md  ads.txt  llms.txt  robots.txt  sellers.json
well-known-template/.well-known/: ai.txt  aibdp.json  apple-app-site-association  assetlinks.json  atproto-did  change-password  consent-required.txt  did.json  gpc.json  host-meta  humans.txt  jwks.json  keybase.txt  nodeinfo  nostr.json  openid-configuration  provenance.json  security.txt  webfinger
(+85 files in other folders)
