# SPDX-License-Identifier: PMPL-1.0-or-later
[package]
name = "tma-mobile"
version = "0.1.0"
edition = "2024"
authors = ["hyperpolymath"]
description = "eTMA Handler Mobile - Post-quantum secure marking companion app"
license = "AGPL-3.0-or-later"
repository = "https://github.com/hyperpolymath/tma-mark2"

[dependencies]
# Dioxus for cross-platform UI
dioxus = { version = "0.6", features = ["mobile"] }
dioxus-mobile = "0.6"

# Async runtime
tokio = { version = "1.42", features = ["rt", "macros"] }

# HTTP client for API communication
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Post-quantum cryptography (matching main app)
pqcrypto-mlkem = "0.9"
pqcrypto-mldsa = "0.6"
blake3 = "1.5"
chacha20poly1305 = { version = "0.10", features = ["std"] }
argon2 = "0.5"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Local storage
sled = "0.34"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14"

[target.'cfg(target_os = "ios")'.dependencies]
oslog = "0.2"

[[bin]]
name = "tma-mobile"
path = "src/main.rs"

[profile.release]
lto = true
opt-level = "z"
strip = true
panic = "abort"
codegen-units = 1
