# SPDX-FileCopyrightText: 2024 Panoptes Contributors
# SPDX-License-Identifier: MIT

[package]
name = "panoptes"
version = "3.0.0"
edition = "2021"
authors = ["Panoptes Contributors"]
description = "AI-powered local file scanner for intelligent renaming and tagging using vision models"
license = "MIT"
repository = "https://github.com/panoptes/panoptes"
documentation = "https://github.com/panoptes/panoptes/wiki"
readme = "README.adoc"
keywords = ["ai", "vision", "file-scanner", "ollama", "moondream"]
categories = ["command-line-utilities", "filesystem", "multimedia"]
rust-version = "1.75"

[features]
default = ["web", "audio", "video", "code"]
web = ["dep:axum", "dep:tower-http", "dep:minijinja"]
audio = ["dep:symphonia", "dep:id3"]
video = []
code = ["dep:tree-sitter", "dep:tree-sitter-rust", "dep:tree-sitter-python", "dep:tree-sitter-javascript"]
full = ["web", "audio", "video", "code"]

[[bin]]
name = "panoptes"
path = "src/main.rs"

[[bin]]
name = "panoptes-undo"
path = "src/bin/panoptes-undo.rs"

[[bin]]
name = "panoptes-web"
path = "src/bin/panoptes-web.rs"

[dependencies]
# Async Runtime
tokio = { version = "1.35", features = ["full", "signal"] }

# CLI
clap = { version = "4.4", features = ["derive", "env", "wrap_help", "string"] }
clap_complete = "4.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# HTTP Client (for Ollama API)
reqwest = { version = "0.11", features = ["json", "multipart"] }

# Web Server (optional)
axum = { version = "0.7", optional = true }
tower-http = { version = "0.5", features = ["fs", "cors", "trace"], optional = true }
minijinja = { version = "1.0", optional = true }

# Database
rusqlite = { version = "0.30", features = ["bundled"] }

# File Watching
notify = { version = "6.1", features = ["serde"] }

# Image Processing
image = "0.24"
base64 = "0.21"

# PDF Processing
pdf-extract = "0.7"
lopdf = "0.31"

# Audio Processing (optional)
symphonia = { version = "0.5", optional = true }
id3 = { version = "1.7", optional = true }

# Archive Processing
zip = "0.6"
tar = "0.4"
flate2 = "1.0"

# Code Analysis (optional)
tree-sitter = { version = "0.20", optional = true }
tree-sitter-rust = { version = "0.20", optional = true }
tree-sitter-python = { version = "0.20", optional = true }
tree-sitter-javascript = { version = "0.20", optional = true }

# Document Processing
calamine = "0.23"
docx-rs = "0.4"

# Hashing & Security
blake3 = "1.5"
sha2 = "0.10"
uuid = { version = "1.6", features = ["v4", "serde"] }

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Misc
walkdir = "2.4"
glob = "0.3"
directories = "5.0"
indicatif = "0.17"
console = "0.15"
dialoguer = "0.11"
colored = "2.1"
tabled = "0.15"
tempfile = "3.9"
url = "2.5"
regex = "1.10"
lazy_static = "1.4"
once_cell = "1.19"

[dev-dependencies]
tempfile = "3.9"
tokio-test = "0.4"
criterion = "0.5"
proptest = "1.4"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 0
debug = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
